[gd_scene load_steps=17 format=3 uid="uid://bhk2r6ll6102j"]

[ext_resource type="Script" path="res://main.gd" id="1_1bvp3"]
[ext_resource type="PackedScene" uid="uid://gvscj5tcb6k4" path="res://hand.tscn" id="1_p3sbv"]
[ext_resource type="Texture2D" uid="uid://gbuhciev5w0c" path="res://images/sphere.png" id="2_2cpx0"]
[ext_resource type="Texture2D" uid="uid://bgrjc03gmvi4s" path="res://background3.jpeg" id="2_e16k5"]
[ext_resource type="PackedScene" uid="uid://d1yu8d4xuagg1" path="res://board.tscn" id="3_d15hh"]
[ext_resource type="PackedScene" uid="uid://ccq3nb604i5hr" path="res://graveyard.tscn" id="5_lxboj"]
[ext_resource type="Script" path="res://graveyard.gd" id="6_uv0vi"]
[ext_resource type="Script" path="res://game_control.gd" id="7_k6sn0"]
[ext_resource type="PackedScene" uid="uid://cc560mpwnuf4n" path="res://end_screen.tscn" id="8_s56s4"]
[ext_resource type="Texture2D" uid="uid://dauxmfjourf3v" path="res://goldstar.png" id="9_0duts"]
[ext_resource type="Texture2D" uid="uid://bym0r51esjq2n" path="res://silverstar.png" id="10_0w7js"]
[ext_resource type="Texture2D" uid="uid://ctte2pyua30nu" path="res://bronzestar.png" id="11_60x4n"]

[sub_resource type="LabelSettings" id="LabelSettings_1ener"]
font_size = 70
font_color = Color(0.93845, 0.93845, 0.93845, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bsku7"]
font_size = 300
outline_size = 10
outline_color = Color(0.000113828, 0.000113828, 0.000113828, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rvrmq"]
font_size = 100
outline_size = 10
outline_color = Color(0.00820201, 0.00820203, 0.00820202, 1)

[sub_resource type="LabelSettings" id="LabelSettings_67x4d"]
font_size = 65
outline_size = 10
outline_color = Color(0.0142752, 0.0142752, 0.0142752, 1)

[node name="Main" type="Node2D"]
position = Vector2(6, 7)
script = ExtResource("1_1bvp3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(956, 536)
scale = Vector2(1.06362, 1.03906)
texture = ExtResource("2_e16k5")

[node name="Spawn" type="Node2D" parent="."]
position = Vector2(90, 823)

[node name="Hand" parent="." instance=ExtResource("1_p3sbv")]
position = Vector2(983, 862)

[node name="Button" type="Button" parent="."]
offset_left = 52.0
offset_top = 68.0
offset_right = 264.0
offset_bottom = 163.0
toggle_mode = true
action_mode = 0
text = "Start"
expand_icon = true

[node name="CardCount" type="Node2D" parent="."]
position = Vector2(39, 637)

[node name="ColorRect" type="Sprite2D" parent="CardCount"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_2cpx0")

[node name="CardCount" type="Label" parent="CardCount/ColorRect"]
offset_top = 7.0
offset_right = 40.0
offset_bottom = 30.0
label_settings = SubResource("LabelSettings_1ener")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Board" parent="." instance=ExtResource("3_d15hh")]

[node name="Graveyard" parent="." instance=ExtResource("5_lxboj")]
script = ExtResource("6_uv0vi")

[node name="GameControl" type="Node2D" parent="."]
script = ExtResource("7_k6sn0")

[node name="Node2D" type="Node2D" parent="."]

[node name="Exile" type="Node2D" parent="."]

[node name="EndScreen" parent="." instance=ExtResource("8_s56s4")]
visible = false

[node name="GoldStar" type="Sprite2D" parent="."]
position = Vector2(1516, 51)
scale = Vector2(0.0710938, 0.0669231)
texture = ExtResource("9_0duts")

[node name="Goldpoints" type="Label" parent="GoldStar"]
offset_left = -196.924
offset_top = -119.54
offset_right = 231.076
offset_bottom = 110.46
text = "99999"
label_settings = SubResource("LabelSettings_bsku7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SilverStar" type="Sprite2D" parent="."]
position = Vector2(1624, 51)
scale = Vector2(0.10552, 0.101254)
texture = ExtResource("10_0w7js")

[node name="Silverpoints" type="Label" parent="SilverStar"]
offset_left = -199.015
offset_top = -128.39
offset_right = 189.985
offset_bottom = 108.61
text = "99999"
label_settings = SubResource("LabelSettings_rvrmq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BronzeStar" type="Sprite2D" parent="."]
position = Vector2(1730, 50)
scale = Vector2(0.148421, 0.157205)
texture = ExtResource("11_60x4n")

[node name="Bronzepoints" type="Label" parent="BronzeStar"]
offset_left = -134.752
offset_top = -82.6944
offset_right = 135.248
offset_bottom = 57.3056
text = "99999"
label_settings = SubResource("LabelSettings_67x4d")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="change_turn" from="Board" to="GameControl" method="_on_board_change_turn"]
